# fco-client

./: .gitignore  fco-client.cabal  stack.yaml
app/: Main.hs
data/pocket/: authorize.json  curl-get.sh  gettoken.json  retrieve.json
src/Fco/: Client.hs
src/Fco/Client/: Demo.hs  Pocket.hs
test/Fco/Client/: ClientSpec.hs
test/data/: pocketdata.json
