name:                 fco-client
version:              0.1.0.0
synopsis:             explore variuos Haskell idioms and patterns
description:          see README.md
homepage:             http://www.functionalconcepts.org
license:              MIT
license-file:         LICENSE
author:               functionalconcepts.org team
maintainer:           team@functionalconcepts.org
copyright:            Copyright (C) 2018 functionalconcepts.org team
category:             Miscellaneous
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Fco.Client
  build-depends:      base
                    , base-compat
                    , basic-prelude
                    , containers
                    , data-default
                    , bytestring
                    , text
                    , unordered-containers
                    , aeson
                    , conduit
                    , conduit-combinators
                    , conduit-extra
                    , http-client
                    , http-client-tls
                    , http-conduit
                    , http-types
                    , yaml
  default-language:   Haskell2010

executable fco-client
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , fco-client
  default-language:   Haskell2010

test-suite fco-client-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  other-modules:      Fco.Client.ClientSpec
  main-is:            Spec.hs
  build-depends:      base
                    , fco-client
                    , hspec
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cyberconcepts/fco-client
